# arduino-vs1053

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  library.properties  platformio.ini
doc/html/: _console_logger_8h_source.html  _v_s1053_8h_source.html  _v_s1053_config_8h_source.html  _v_s1053_driver_8h.html  _v_s1053_driver_8h_source.html  _v_s1053_ext_8h_source.html  _v_s1053_logger_8h_source.html  _v_s1053_recording_8h.html  _v_s1053_recording_8h_source.html  _v_s1053_s_p_i_8h_source.html  annotated.html  class_v_s1053-members.html  class_v_s1053.html  class_v_s1053_1_1_v_s1053_equilizer-members.html  class_v_s1053_1_1_v_s1053_equilizer.html  class_v_s1053_1_1_v_s1053_equilizer_value-members.html  class_v_s1053_1_1_v_s1053_equilizer_value.html  class_v_s1053_s_p_i-members.html  class_v_s1053_s_p_i.html  class_v_s1053_s_p_i_arduino-members.html  class_v_s1053_s_p_i_arduino.html  class_v_s1053_s_p_i_e_s_p32-members.html  class_v_s1053_s_p_i_e_s_p32.html  classarduino__vs1053_1_1_v_s1053-members.html  classarduino__vs1053_1_1_v_s1053.html  classarduino__vs1053_1_1_v_s1053___s_p_i-members.html  classarduino__vs1053_1_1_v_s1053___s_p_i.html  classarduino__vs1053_1_1_v_s1053___s_p_i_arduino-members.html  classarduino__vs1053_1_1_v_s1053___s_p_i_arduino.html  classarduino__vs1053_1_1_v_s1053___s_p_i_e_s_p32-members.html  classarduino__vs1053_1_1_v_s1053___s_p_i_e_s_p32.html  classes.html  files.html  (+21 more)
src/: ConsoleLogger.h  VS1053.cpp  VS1053.h  VS1053Config.h  VS1053Driver.cpp  VS1053Driver.h  VS1053Ext.h  VS1053Logger.cpp  VS1053Logger.h  VS1053Recording.h  VS1053SPI.h
(+68 files in other folders)
